postgres-pod.yml
apiVersion: v1 
kind: Pod
metadata:
  name: postgres-pod
  namespace: voting-app
  labels:
    name: postgres-pod
    app: demo-voting-app
spec:
  containers:
    - name: postgres
      image: postgres:9.4
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgres/data
      resources: {}
  volumes:
    - name: db-data
      persistentVolumeClaim:
        claimName: postgres-pvc
