ingress-voting-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vote
  namespace: voting-app
spec:
  ingressClassName: nginx
  rules:
  - host: app.sgocp.net
    http:
      paths:
      - backend:
          service:
            name: voting-service
            port:
              number: 80
        path: /vote
        pathType: Prefix
      - backend:
          service:
            name: result-service
            port:
              number: 80
        path: /result
        pathType: Prefix
status:
  loadBalancer: {}
